--- a/package.json
+++ b/package.json
@@ -1,17 +1,40 @@
 {
-  "name": "benq-projector-control",
+  "name": "benq-control-server",
   "version": "0.1.0",
-  "private": true,
-  "workspaces": [
-    "server"
-  ],
+  "type": "module",
   "scripts": {
-    "start": "pnpm --filter server start",
-    "dev": "pnpm --filter server dev",
-    "build": "pnpm --filter server build",
-    "preview": "pnpm --filter server preview"
+    "start": "./bin/develop",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "server": "bun run --watch src/index.ts",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "fp-ts": "^2.16.11",
+    "hono": "^3.11.7",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
+    "@types/bun": "latest",
+    "autoprefixer": "^10.4.16",
+    "bulma": "^0.9.4",
+    "postcss": "^8.4.32",
+    "prettier": "^3.7.4",
+    "prettier-plugin-svelte": "^3.4.1",
+    "sass": "^1.69.5",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10"
+  },
+  "pnpm": {
+    "overrides": {
+      "sass-embedded": "npm:sass@1.97.0"
+    }
   }
 }
