--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "fp-ts": "^2.16.11",
     "hono": "^3.11.7",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "svelte-french-toast": "^1.2.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
