Debug responsiveness issues
Previously, a known hono issue was causing SSE to not update widgets to
prevent further mutation while waiting for a change to propagate. The
Hono streamSSE helper immediately closes connections after the callback
returns, causing clients to disconnect every ~30 seconds. Switched to
c.stream() with manual SSE formatting and keepalive comments to maintain
persistent connections.

Related: honojs/hono#3783, honojs/hono#2879

- Improve logging and support trace logging.
- Proliferate ResustTask combinators.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "types": ["@types/bun", "vite/client", "svelte"]
+    "types": ["@types/bun", "vite/client", "svelte", "vite-plugin-terminal/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.svelte"],
   "exclude": ["node_modules", "dist"]
