--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "chalk": "^5.6.2",
     "fp-ts": "^2.16.11",
     "hono": "^3.11.7",
     "rxjs": "^7.8.2",
@@ -31,7 +32,8 @@
     "svelte-check": "^3.6.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vite-plugin-terminal": "^1.3.0"
   },
   "pnpm": {
     "overrides": {
